components/btp-service-broker/k8s/broker/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: btp-service-broker
  name: btp-service-broker
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: btp-service-broker
  type: ClusterIP
